Added timezone support to the API when managing users (#952).
